# sarChangeDetection

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/sarChangeDetection/: __init__.py
src/sarChangeDetection/novakMultiChannelCD/: __init__.py  getTestStatistics.py
